feat: add score

--- a/snake-game/index.html
+++ b/snake-game/index.html
@@ -12,13 +12,12 @@
 
 <body>
     <div class="container">
-        <div class="game-board">
-            <!-- <div>1</div>
-            <div>1</div>
-            <div>1</div>
-            <div>1</div>
-            <div>1</div>
-            <div>1</div> -->
+        <div class="game-wrapper">
+            <div class="score">
+                <span class="score-numbers">0</span>
+            </div>
+            <div class="game-board">
+            </div>
         </div>
     </div>
     <script src="./scripts/game.js" type="module"></script>
