--- a/snake-game/index.html
+++ b/snake-game/index.html
@@ -13,7 +13,8 @@
 <body>
     <div class="container">
         <div class="game-wrapper">
-            <div class="score">
+
+            <div class="game-score">
                 <span class="score-numbers">0</span>
             </div>
             <div class="game-board">
