--- a/image-carousel/index.html
+++ b/image-carousel/index.html
@@ -8,12 +8,29 @@
     <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./style.css">
     <script src="./app.js" defer></script>
+    <script src="https://kit.fontawesome.com/a682f71039.js" crossorigin="anonymous"></script>
     <title>Image Carousel</title>
 </head>
 
 <body>
-    <section class="photo-gallery">
+    <section class="gallery-container">
+        <div class="gallery-slider">
+            <img class="gallery-image" id="last-clone" src="./assets/road-gdbc558022_1280.jpg" alt="road">
+            <img class="gallery-image" src="./assets/aurora-g8d6537015_1280.jpg" alt="aurora">
+            <img class="gallery-image" src="./assets/avenue-g300459ddd_1280.jpg" alt="avenue">
+            <img class="gallery-image" src="./assets/mountains-g9a7e9f291_1280.jpg" alt="mountains">
+            <img class="gallery-image" src="./assets/night-g34b5debef_1280.jpg" alt="night">
+            <img class="gallery-image" src="./assets/pink-g5bc86e197_1280.jpg" alt="pink">
+            <img class="gallery-image" src="./assets/road-gdbc558022_1280.jpg" alt="road">
+            <img class="gallery-image" id="first-clone" src="./assets/aurora-g8d6537015_1280.jpg" alt="aurora">
 
+        </div>
+        <button class="prevBtn">
+            <i class="fa-solid fa-arrow-left"></i>
+        </button>
+        <button class="nextBtn">
+            <i class="fa-solid fa-arrow-right"></i>
+        </button>
     </section>
 </body>
 
