feat: add commas for big numbers and percentage function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="clear">
         <img src="./assets/svg/clear-all.svg" alt="clear">
       </div>
-      <div class="operation colored">%</div>
+      <div class="percent colored">%</div>
       <div class="operation colored">/</div>
       <div class="number">7</div>
       <div class="number">8</div>
@@ -30,12 +30,12 @@
       <div class="number">4</div>
       <div class="number">5</div>
       <div class="number">6</div>
-      <div class="operation colored">&minus;</div>
+      <div class="operation colored">-</div>
       <div class="number">1</div>
       <div class="number">2</div>
       <div class="number">3</div>
       <div class="operation colored">+</div>
-      <div class="plus-minus">+/&minus;</div>
+      <div class="plus-minus">+/-</div>
       <div class="number">0</div>
       <div class="number">.</div>
       <div class="equals colored">=</div>
