--- a/password-generator/index.html
+++ b/password-generator/index.html
@@ -7,44 +7,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="./index.js" defer></script>
+  <script src="https://kit.fontawesome.com/a682f71039.js" crossorigin="anonymous"></script>
   <title>Password generator</title>
 </head>
 
 <body>
   <div class="container">
-    <h1 class="title">Generate a Secure Password</h1>
+    <h1 class="title">Generate a secure password</h1>
     <div class="display">
       <div class="output">
-        <div class="password"></div>
-        <div class="copy"></div>
-        <div class="generate"></div>
+        <div class="password">hjdSdds12Cxss</div>
+        <div class="copy"> <i class="fa-solid fa-copy"> </i></div>
+        <div class="generate"><i class="fa-solid fa-arrows-rotate"></i></div>
       </div>
       <div class="password-strength"></div>
     </div>
     <div class="settings">
       <h2 class="settings__title">Customize your password</h2>
       <div class="settings__pass-length">
-        <h4>Password length</h4>
+        <p class="pass-length__title">Password length</p>
         <div class="pass-length__container">
           <div class="length-number">10</div>
           <input type="range" min="5" max="40" class="input-password">
         </div>
       </div>
       <div class="settings__additional">
-        <input type="checkbox" class="digits" id="digits">
-        <label for="digits">Digits</label>
-
-        <input type="checkbox" class="letters" id="letters">
-        <label for="letters">Letters</label>
-
-        <input type="checkbox" class="lowercase" id="lowercase">
-        <label for="letters">Lowercase</label>
-
-        <input type="checkbox" class="uppercase" id="uppercase">
-        <label for="letters">Uppercase</label>
-
-        <input type="checkbox" class="special-characters" id="special-characters">
-        <label for="letters">Special characters</label>
+        <div>
+          <input type="checkbox" class="digits" id="digits">
+          <label for="digits">Digits</label>
+        </div>
+        <div>
+          <input type="checkbox" class="letters" id="letters">
+          <label for="letters">Letters</label>
+        </div>
+        <div>
+          <input type="checkbox" class="lowercase" id="lowercase">
+          <label for="lowercase">Lowercase</label>
+        </div>
+        <div>
+          <input type="checkbox" class="uppercase" id="uppercase">
+          <label for="uppercase">Uppercase</label>
+        </div>
+        <div>
+          <input type="checkbox" class="special-characters" id="special-characters">
+          <label for="special-characters">Special characters</label>
+        </div>
       </div>
     </div>
   </div>
