--- a/password-generator/index.html
+++ b/password-generator/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script src="./index.js" defer></script>
   <script src="https://kit.fontawesome.com/a682f71039.js" crossorigin="anonymous"></script>
+  <script src="./index.js" defer></script>
   <title>Password generator</title>
 </head>
 
@@ -16,7 +16,8 @@
     <h1 class="title">Generate a secure password</h1>
     <div class="display">
       <div class="output">
-        <div class="password">hjdSdds12Cxss</div>
+        <div class="password"></div>
+        <span class="tooltip-pass">Copied</span>
         <div class="copy"> <i class="fa-solid fa-copy"> </i></div>
         <div class="generate"><i class="fa-solid fa-arrows-rotate"></i></div>
       </div>
@@ -28,29 +29,28 @@
         <p class="pass-length__title">Password length</p>
         <div class="pass-length__container">
           <div class="length-number">10</div>
-          <input type="range" min="5" max="40" class="input-password">
+          <div class="range__slider">
+            <div class="range"></div>
+            <input type="range" min="0" max="40" class="input-password">
+          </div>
         </div>
       </div>
       <div class="settings__additional">
         <div>
-          <input type="checkbox" class="digits" id="digits">
+          <input type="checkbox" class="digits active" id="digits" checked>
           <label for="digits">Digits</label>
         </div>
         <div>
-          <input type="checkbox" class="letters" id="letters">
-          <label for="letters">Letters</label>
-        </div>
-        <div>
           <input type="checkbox" class="lowercase" id="lowercase">
-          <label for="lowercase">Lowercase</label>
+          <label for="lowercase">Lowercase letters</label>
         </div>
         <div>
           <input type="checkbox" class="uppercase" id="uppercase">
-          <label for="uppercase">Uppercase</label>
+          <label for="uppercase">Uppercase letters</label>
         </div>
         <div>
-          <input type="checkbox" class="special-characters" id="special-characters">
-          <label for="special-characters">Special characters</label>
+          <input type="checkbox" class="specialChars" id="specialChars">
+          <label for="specialChars">Special characters</label>
         </div>
       </div>
     </div>
