feat: add all functionality and improve styles

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -18,14 +18,15 @@
     </form>
     <h2 class="city-name">Weather in</h2>
     <div class="temperature">51 °C</div>
-    <div class="additional">
-      <div class="additional__weather">
+    <div class="weather-info">
+      <div class="weather-info__weather">
+        <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="">
         Cloudy
       </div>
-      <div class="additional__humidity">
+      <div class="weather-info__humidity">
         Humidity: 60%
       </div>
-      <div class="additional__wind-speed">
+      <div class="weather-info__wind-speed">
         Wind Speed: 6.2%
       </div>
     </div>
