--- a/pomodoro-clock/index.html
+++ b/pomodoro-clock/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <script src="./script.js"></script>
+  <script src="./script.js" defer></script>
   <script src="https://kit.fontawesome.com/a682f71039.js" crossorigin="anonymous"></script>
   <title>Pomodoro Clock</title>
 </head>
@@ -17,10 +17,11 @@
 
     <div class="top-block">
       <h2 class="top-block__title">Session</h2>
-      <div class="top-block__time">20:00</div>
+      <div class="top-block__time"><span class="time-minutes">1</span>:<span class="time-seconds">00</span></div>
       <div class="top-block__buttons">
         <div class="buttons__play-pause top-block__button"><i class="fa-solid fa-play top-block__icon"></i>Play</div>
-        <div class="buttons__reset top-block__button"><i class="fa-solid fa-arrows-rotate top-block__icon"></i>Reset</div>
+        <div class="buttons__reset top-block__button"><i class="fa-solid fa-arrows-rotate top-block__icon"></i>Reset
+        </div>
       </div>
     </div>
 
@@ -28,18 +29,20 @@
       <div class="bottom-block__container">
         <div class="session-title">Session Length</div>
         <div class="time-container">
-          <div class="time-container__button"><i class="fa-solid fa-arrow-up button-arrow"></i></div>
-          <div class="time-container__session">20 min</div>
-          <div class="time-container__button"><i class="fa-solid fa-arrow-down button-arrow"></i></div>
+          <div class="time-container__button" id="lengthBtn-up"><i class="fa-solid fa-arrow-up button-arrow"></i></div>
+          <div class="time-container__session"><span id="length-time">20</span> min</div>
+          <div class="time-container__button" id="lengthBtn-down"><i class="fa-solid fa-arrow-down button-arrow"></i>
+          </div>
 
         </div>
       </div>
       <div class="bottom-block__container">
         <div class="session-title">Session Break</div>
         <div class="time-container">
-          <div class="time-container__button"><i class="fa-solid fa-arrow-up button-arrow"></i></div>
-          <div class="time-container__break">5 min</div>
-          <div class="time-container__button"><i class="fa-solid fa-arrow-down button-arrow"></i></div>
+          <div class="time-container__button" id="breakBtn-up"><i class="fa-solid fa-arrow-up button-arrow"></i></div>
+          <div class="time-container__break"><span id="break-time">5</span> min</div>
+          <div class="time-container__button" id="breakBtn-down"><i class="fa-solid fa-arrow-down button-arrow"></i>
+          </div>
         </div>
       </div>
     </div>
